// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`cli restart failed run group 1`] = `
"main
  fail# retry
    test1 ✔
    test3 ✘
    main.group3.test3.res.v1: b ≠ a

    {
      \\"req\\": {
        \\"v1\\": \\"a\\"
      },
      \\"res\\": {
        \\"v1\\": \\"a\\"
      }
    }
    test1 ✔
    test3 ✘
    main.group3.test3.res.v1: b ≠ a

    {
      \\"req\\": {
        \\"v1\\": \\"a\\"
      },
      \\"res\\": {
        \\"v1\\": \\"a\\"
      }
    }
    test1 ✔
    test3 ✘
    main.group3.test3.res.v1: b ≠ a

    {
      \\"req\\": {
        \\"v1\\": \\"a\\"
      },
      \\"res\\": {
        \\"v1\\": \\"a\\"
      }
    }
"
`;

exports[`cli run group 1`] = `
"main
  vars ✔
  skip ⌾
  delay
    test2 ✔
  fail# retry
    test1 ✔
    test3 ✘
    main.group3.test3.res.v1: b ≠ a

    {
      \\"req\\": {
        \\"v1\\": \\"a\\"
      },
      \\"res\\": {
        \\"v1\\": \\"a\\"
      }
    }
    test1 ✔
    test3 ✘
    main.group3.test3.res.v1: b ≠ a

    {
      \\"req\\": {
        \\"v1\\": \\"a\\"
      },
      \\"res\\": {
        \\"v1\\": \\"a\\"
      }
    }
    test1 ✔
    test3 ✘
    main.group3.test3.res.v1: b ≠ a

    {
      \\"req\\": {
        \\"v1\\": \\"a\\"
      },
      \\"res\\": {
        \\"v1\\": \\"a\\"
      }
    }
"
`;

exports[`cli start from first 1`] = `
"main
  test1 ✔
  test2 ✘
  main.test2.res.v1: b ≠ a

  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;

exports[`cli start from last failed 1`] = `
"main
  test2 ✘
  main.test2.res.v1: b ≠ a

  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;

exports[`cli still start from last failed 1`] = `
"main
  test2 ✘
  main.test2.res.v1: b ≠ a

  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;

exports[`cli target folder 1`] = `
"main
  test1 ✔
  test2 ✘
  main.test2.res.v1: b ≠ a

  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;

exports[`cli target folder with options --env 1`] = `
"main
  test1 ✔
mod1
  test1 ✘
  mod1.test1.res.v1: b ≠ a

  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;

exports[`cli with options --ci 1`] = `
"main
  test1 ✔
  test2 ✘
  test3 ✘
  test4 ✔
mod1
  test1 ✘
  test2 ✔

1. test2(main.test2)
   main.test2.res.v1: b ≠ a

2. test3(main.test3)
   main.test3.res.v1: b ≠ a

3. test1(mod1.test1)
   mod1.test1.res.v1: b ≠ a

"
`;

exports[`cli with options --dry-run 1`] = `
"main
  test1 (main.test1)
  test2 (main.test2)
  test3 (main.test3)
  test4 (main.test4)
mod1
  test1 (mod1.test1)
  test2 (mod1.test2)
"
`;

exports[`cli with options --env 1`] = `
"main
  test1 ✔
mod1
  test1 ✘
  mod1.test1.res.v1: b ≠ a

  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;

exports[`cli with options --only --dump 1`] = `
"main
  test4 ✔
  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;

exports[`cli with options --only 1`] = `
"main
  test4 ✔
"
`;

exports[`cli with options --only 2 1`] = `
"mod1
  test1 ✘
  mod1.test1.res.v1: b ≠ a

  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;

exports[`cli with options --reset 1`] = `
"main
  test1 ✔
  test2 ✘
  main.test2.res.v1: b ≠ a

  {
    \\"req\\": {
      \\"v1\\": \\"a\\"
    },
    \\"res\\": {
      \\"v1\\": \\"a\\"
    }
  }
"
`;
